--- a/Practica 2/paginaRedes/angular.json
+++ b/Practica 2/paginaRedes/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f2e393d8-5b6c-4d22-ad53-99d55a24bb68"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
